--- a/index.html
+++ b/index.html
@@ -3,13 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" href="/escudo.png" sizes="16x16">
-  <title>Atletas Botafogo</title>
-  <link rel="stylesheet" href="estilo.css">
-  <script type='module' src="codigo.js"></script>
+  <link rel="icon" type="image/png" href="Images/escudo.png" sizes="16x16">
+  <title>Botafogo</title>
+  <link rel="stylesheet" href="Css/css.css">
+ 
+
+  <script type='module' src="Js/script.js" defer></script>
 </head>
 <body>
-<!-- página com instruções para usar o SHA256 -->
-<!-- https://pajhome.org.uk/crypt/md5/scripts.html -->
+  <div class="body">
+    <h1 class="title">Atletas do Botafogo</h1>
+    <p class="subtitle">Bem-vindo ao Mundo dos Jogadores do Botafogo!</p>
+    <input type="password" id="senha" placeholder="Informe a Senha">
+    <button class="login" id="loginBtn">Entrar</button>
+    <p>Efetue login com a senha: FOGAO</p>
+  </div>
 </body>
 </html>
